[package]
name = "alarmmgr-cli"
version = "0.0.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/alarmmgr"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/alarmmgr"
homepage = "https://github.com/darwinia-network/alarmmgr"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["monitor", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
thiserror = "1"
tracing   = "0.1"

structopt  = "0.3"
colored    = "2"
term-table = "1.3"

#strum = { version = "0.21", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
#serde_json = "1"

alarmmgr-types = { path = "../types" }
