[package]
name = "alarmmgr-cli"
version = "0.0.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Program monitor"
repository = "https://github.com/darwinia-network/alarmmgr"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/alarmmgr"
homepage = "https://github.com/darwinia-network/alarmmgr"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["monitor", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
thiserror = "1"
tracing   = "0.1"

structopt  = "0.3"
colored    = "2"
term-table = "1.3"

serde       = { version = "1", features = ["derive"] }
tokio       = { version = "1", features = ["full"] }
array-bytes = "2"

alarmmgr-types        = { path = "../types" }
alarmmgr-toolkit      = { path = "../toolkit", features = ["log"] }
alarmmgr-monitor      = { path = "../monitor" }
alarmmgr-notification = { path = "../notification", features = [ "slack" ] }
