[package]
name = "alarmmgr-monitor"
version = "0.0.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Program monitor"
repository = "https://github.com/darwinia-network/alarmmgr"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/alarmmgr"
homepage = "https://github.com/darwinia-network/alarmmgr"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["monitor", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
thiserror = "1"
tracing   = "0.1"

async-trait = "0.1"
reqwest     = { version = "0.11", features = ["json", "rustls-tls"] }

alarmmgr-types        = { path = "../types" }
alarmmgr-toolkit      = { path = "../toolkit", features = ["log"] }
alarmmgr-notification = { path = "../notification" }

