[package]
name = "alarmmgr-toolkit"
version = "0.0.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Program monitor"
repository = "https://github.com/darwinia-network/alarmmgr"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/alarmmgr"
homepage = "https://github.com/darwinia-network/alarmmgr"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["monitor", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
once_cell = { optional = true, version = "1" }
pad       = { optional = true, version = "0.1" }

[features]
log     = ["once_cell", "pad"]

