[package]
name = "alarmmgr-types"
version = "0.0.1"
authors = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia bridger"
repository = "https://github.com/darwinia-network/alarmmgr"
license = "MIT"
documentation = "https://rust-docs.darwinia.network/alarmmgr"
homepage = "https://github.com/darwinia-network/alarmmgr"
include = [
  "Cargo.toml",
  "**/*.rs",
  "README.md",
  "LICENSE"
]
keywords = ["monitor", "darwinia"]
readme = 'README.md'
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
